Ensure stars appear behind content

--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -22,6 +22,7 @@ $app-starsLarge: multiple-box-shadow(5);
 		opacity: 0.5;
 		border-radius: 100%;
 		position: absolute;
+		z-index: $_zIndex-1;
 		background: transparent;
 		@include transitionOpacity();
 
